2009-09-01  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_stat_panel.c: 
	  Fix some minor compile warnings.
	  Change visiblity test to be if the NCU has state ONLINE - all others
	  should really be shown since there is something that needs
	  communcation with user.
	* common/nwamui_daemon.c: 
	  Add empty handler to new NWAM event type QUEUE_QUIET.
	* common/nwamui_ncu.c:
	  Use cached nwam state values when calculating the connection_state.
	  Fix defect#11020 where we should be also checking for aux_state of
	  DOWN to determine if cable is unplugged or not.
	* nwam_core/usr/include/libnwam.h:
	  Updated to latest libnwam.h as on 9/01.

2009-09-01  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_daemon.c: 
	  Fix defect#10986 by not crashing if unable to read in NCP, but
	  instead continue as if it's not there.
	* common/nwamui_ncu.c: 
	  Fix for defect#10986 root-cause by deleteing the IP_VERSION property
	  if it's empty rather than creating an empty value.

2009-09-01  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_conn_stat_panel.c (conn_view_filter_visible_cb):
	On conn_state_panel, use ncu_get_enabled to filter enabled ncus.

2009-08-31  Darren Kenny  <darren.kenny@sun.com>

	* configure.in:
	  Bump to 0.99.8
	* nwam_core/lib/i386/libnwam.so.1, nwam_core/lib/sparc/libnwam.so.1,
	  nwam_core/usr/include/libnwam.h:
	  Update for 08/26 build of nwam.

2009-08-31  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_ncu.c: 10984 not possible to disable network interfaces

2009-08-28  Darren Kenny  <darren.kenny@sun.com>

	* common/libnwamui.c, common/libnwamui.h,
	  capplet/nwam_conn_conf_ip_panel.c:
	  Slightly change the IP Address validation error message, and
	  validate prefix entry separately, providing errors as needed.

2009-08-27  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_env.c: 
	  Fix some issues in nwamui_env when setting the active property where
	  it was causing some settings of this to fail, meaning that location